[package]
name = "what-time"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
chrono = { version = "0.4", features = ["js-sys", "wasm-bindgen"] }
chrono-tz = "0.10"
log = "0.4"
leptos_icons = { version = "0.7" }
icondata = { version = "0.6" }
console_log = { version = "1" }

[features]
csr = ["leptos/csr"]
