[package]
name = "what_time"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
chrono = { version = "0.4", features = ["js-sys", "wasm-bindgen"] }
chrono-tz = "0.10"
codee = { version = "0.3", features = ["json_serde"]}
log = "0.4"
leptos_icons = { version = "0.7" }
leptos-use = { version="0.17", features = ["storage"] }
icondata = { version = "0.6" }
console_log = { version = "1" }
capitalize = "0.3"
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

[features]
csr = ["leptos/csr"]
