[package]
name = "what_time"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"
leptos_router = "0.8"
chrono = { version = "0.4", features = ["js-sys", "wasm-bindgen"] }
chrono-tz = "0.10"
codee = { version = "0.3", features = ["json_serde"]}
log = "0.4"
leptos_icons = "0.7"
leptos-use = { version="0.19", features = ["storage"] }
icondata = "0.7"
console_log = "1"
capitalize = "0.3"
strum = "0.28"
strum_macros = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "=0.3.36"


[package.metadata.cargo-machete]
ignored = ["time"]

[features]
csr = ["leptos/csr"]
